<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_transactions"
        android:icon="@drawable/ic_list"
        android:title="@string/nav_transactions" />

    <item
        android:id="@+id/nav_placeholder"
        android:title=""
        android:enabled="false"
        android:icon="@android:color/transparent" />

    <item
        android:id="@+id/nav_analytics"
        android:icon="@drawable/ic_chart"
        android:title="@string/nav_analytics" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/nav_profile" />
</menu>
